--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,9 @@ services:
     build:
       context: ./Backend/odc
       dockerfile: Dockerfile
-      container_name: backend
+    container_name: backend
     ports:
       - "8001:8000"
-    depends_on:
-    frontend:
-        build:
-        context: ./Frontend
-        dockerfile: Dockerfile
-        container_name: frontend
-    ports:
-      - "8081:80"
     depends_on:
       - database
     environment:
@@ -23,6 +15,17 @@ services:
       - DATABASE_NAME=odc
       - DATABASE_USER=postgres
       - DATABASE_PASSWORD=postgres
+    restart: unless-stopped
+
+  frontend:
+    build:
+      context: ./Frontend
+      dockerfile: Dockerfile
+    container_name: frontend
+    ports:
+      - "8081:80"
+    depends_on:
+      - backend
     restart: unless-stopped
 
   database:
@@ -42,7 +45,7 @@ services:
     image: jenkins/jenkins:lts
     container_name: jenkins
     ports:
-      - "8081:8080"
+      - "8082:8080"
       - "50001:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
@@ -53,4 +56,3 @@ services:
 volumes:
   postgres_data:
   jenkins_home:
-
