--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build:
@@ -36,7 +34,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - "5434:5433"
+      - "5434:5432"   # Corrigé ici aussi, attention port interne/externe
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -53,6 +51,20 @@ services:
     user: root
     restart: unless-stopped
 
+  sonarqube:
+    image: sonarqube:lts
+    container_name: sonarqube
+    ports:
+      - "9000:9000"
+    environment:
+      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+    restart: unless-stopped
+
 volumes:
   postgres_data:
   jenkins_home:
+  sonarqube_data:
+  sonarqube_extensions:
