--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
-<<<<<<< HEAD
+version: "3.8"
 
-=======
->>>>>>> cfd4a70d513472204d5e44b79578aef89cbdb12d
 services:
   backend:
     build:
@@ -9,11 +7,7 @@ services:
       dockerfile: Dockerfile
     container_name: backend
     ports:
-<<<<<<< HEAD
-      - "8002:8000"
-=======
-      - "8005:8000"
->>>>>>> cfd4a70d513472204d5e44b79578aef89cbdb12d
+      - "8002:8000"    # ou "8005:8000" selon ton choix
     depends_on:
       - database
     environment:
@@ -29,11 +23,7 @@ services:
       dockerfile: Dockerfile
     container_name: frontend
     ports:
-<<<<<<< HEAD
-      - "5173:5173"
-=======
-      - "5175:5176"
->>>>>>> cfd4a70d513472204d5e44b79578aef89cbdb12d
+      - "5173:5173"    # ou "5175:5176" selon ton choix
     depends_on:
       - backend
     restart: unless-stopped
@@ -46,11 +36,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-<<<<<<< HEAD
-      - "5434:5432"   # Corrigé ici aussi, attention port interne/externe
-=======
-      - "5439:5438"   # Corrigé ici aussi, attention port interne/externe
->>>>>>> cfd4a70d513472204d5e44b79578aef89cbdb12d
+      - "5434:5432"    # ou "5439:5438" selon ton choix
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -59,13 +45,8 @@ services:
     image: jenkins/jenkins:lts
     container_name: jenkins
     ports:
-<<<<<<< HEAD
-      - "8083:8080"
-      - "50002:50000"
-=======
-      - "8089:8080"
-      - "50004:50000"
->>>>>>> cfd4a70d513472204d5e44b79578aef89cbdb12d
+      - "8083:8080"    # ou "8089:8080"
+      - "50002:50000"  # ou "50004:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
@@ -76,11 +57,7 @@ services:
     image: sonarqube:lts
     container_name: sonarqube
     ports:
-<<<<<<< HEAD
-      - "9000:9000"
-=======
-      - "9010:9009"
->>>>>>> cfd4a70d513472204d5e44b79578aef89cbdb12d
+      - "9000:9000"    # ou "9010:9009"
     environment:
       - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
     volumes:
@@ -93,7 +70,3 @@ volumes:
   jenkins_home:
   sonarqube_data:
   sonarqube_extensions:
-<<<<<<< HEAD
-
-=======
->>>>>>> cfd4a70d513472204d5e44b79578aef89cbdb12d
