--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     container_name: backend
     ports:
-      - "8005:8000"    # ou "8005:8000" selon ton choix
+      - "8000:8000"  # Port local 8000 redirigé vers 8000 du container
     depends_on:
       - database
     environment:
@@ -23,7 +23,7 @@ services:
       dockerfile: Dockerfile
     container_name: frontend
     ports:
-      - "5175:5176"    # ou "5175:5176" selon ton choix
+      - "5173:5173"  # Port local 5173 pour accéder au frontend
     depends_on:
       - backend
     restart: unless-stopped
@@ -36,7 +36,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - "5439:5438"    # ou "5439:5438" selon ton choix
+      - "5432:5432"  # Port standard de PostgreSQL
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -45,8 +45,8 @@ services:
     image: jenkins/jenkins:lts
     container_name: jenkins
     ports:
-      - "8089:8080"    # ou "8089:8080"
-      - "50004:50000"  # ou "50004:50000"
+      - "8080:8080"    # Accès interface Jenkins
+      - "50000:50000"  # Agent Jenkins
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
@@ -57,7 +57,7 @@ services:
     image: sonarqube:lts
     container_name: sonarqube
     ports:
-      - "9010:9009"    # ou "9010:9009"
+      - "9000:9000"  # Interface SonarQube
     environment:
       - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
     volumes:
